# santa-telemetry-reporter

./: .gitignore  README.md  analyzer.py  deserializer.py  main.py  pyproject.toml  reporter.py
deserializer/: Cargo.toml  deserializer.pyi  pyproject.toml
deserializer/src/: lib.rs
processor/: base.py  client.py
processor/analyzer/: analyzers.py  models.py
proto/: build_proto.py  version_protofiles.json
