[package]
name = "deserializer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deserializer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {
    version = "0.29.0",
    features = [
        "experimental-inspect"
    ]
}
